modification on methods to get URLs